style.css
/* MAIN STYLES */

h1, h2, h3, h4, p{
    margin-top: 15px;
    margin-bottom: 15px;
}

h1{
    font-size: calc(48pt);
}

h2{
    font-size: calc(36pt);
}

h3{
    font-size: calc(24pt);
}

h4{
    font-size: calc(14pt);
}

a {
    color: inherit;
    text-decoration: inherit;
}

a:hover {
    text-decoration: underline;
}

a[href*="//"]:not([href*="magniswerfer.github.io"]), a[href*="mailto:"]{
    /* external link styles, use :before or :after if you want! */
    color: blue;
    text-decoration: underline;
}

:root {
    --light: white;
    --dark: black;
  }

*{
    color: var(--contrast);
    font-family: "Courier New";
    
}

.dark-theme {
    --main: var(--light); /* THIS IS A HACKY SOLUTION!*/
    --contrast: var(--dark);
}
  
.light-theme {
    --main: var(--light);
    --contrast: var(--dark);
}


body {
    display: flex;
    flex-direction: column;
    background: var(--main);
    margin: 0;
    font-size: 14pt;
    min-height: 100vh;
}

.wrapper{
    margin-left: auto;
    margin-right: auto;
    flex: 1 0 auto;
}

.footer{
    background-color: var(--contrast);
    color: var(--main);
    font-size: 8pt;
    padding-left: 5px;
    flex-shrink: 0;
}

/*  NAVIGATION   */

.nav-wrapper{
    background-color: var(--main);
    bottom: 0pt;
    padding: 5px;
}

nav{
    position: sticky;
    top: 0;
    background-color: var(--main);
    border-bottom: 2px solid var(--contrast);
}

.menu{
    position: sticky;
    display: flex;
    flex-direction: row;
    padding: 10px 10px 10px 10px;
    
}

.menu-toggle{
    display: none;
    float: right;
}

.menu-item{
    color: var(--contrast);
    cursor: pointer;
}

.menu-item:hover{
    text-decoration: underline;
}

.menu-item.theme-switcher{
    text-decoration: none;
    margin-right: 0px;
}

.menu-item-separator{
    color: var(--contrast);
    font-size: large;
    margin-right: 10px;
    margin-left: 10px;
}

.current-page{
    text-decoration: underline;
}

.hamburger-icon{
    display: none;
    color: var(--contrast);
    font-size: calc(24pt + 1vw);
    
}

.hamburger-icon:hover{
    cursor: pointer;
}

.hamburger-icon.open{
    text-decoration: underline;
}

/* BLOG STUFF */


.blog-navigation{
    display: flex;
}

.blog-filter-text{
    color: var(--main);
    margin-right: 10px;
}

.blog-filter-toggle{
    color: var(--main);
}

.blog-list{
    list-style: none;
    padding-left: 0;
}

.blog-categories{
    display: flex;
}

.blog-category:hover{
    text-decoration: underline;
    cursor: pointer;
}

.blog-category:active{
    text-decoration: underline;
}

.blog-post.hidden{
    display: none;
}

.blog-post:hover{
    text-decoration: underline;
}

.blog-category-separator{
    margin-left: 10px;
    margin-right: 10px;
}

.blog-post-byline{
    font-size: small;
}

@media only screen and (max-width : 849px) {

    .wrapper{
        width: 100vw;
    }

    a{
        width: 100%;
        margin-left:0;
        margin-right:0;
        padding-left:0;
        padding-right:0;
    }

    .content{
        margin: 20px;
    }

    .nav-wrapper{
        background-color: var(--contrast);
        padding: 5px;
    }

    nav{
        position: sticky;
        font-size: calc(36pt + 1vw);
        background-color: var(--contrast);
    }

    .hamburger-icon{
        display: block;
        color: var(--main);
    }

    .menu-toggle{
        display: block;
        color: var(--main);
    }

    .menu-toggle.open{
        transform: rotate(-90deg);
    }

    .menu{
        flex-direction: column;
        display: none;
    }

    .menu-item{
        color: var(--main);
    }

    .menu-item-separator{
        display: none;
    }

    .menu.visible{
        display: block;
    }

    /* BLOG STUFF*/

    .blog-navigation{
        background-color: var(--contrast);
        color: var(--main);
        padding: 10px;
        display: flex;
        flex-direction: column;
    }

    .blog-categories{
        display: none;
    }

    .blog-categories.shown{
        display: flex;
        flex-direction: column;
    }

    .blog-category{
        font-size: 14pt;
        margin-top: 10px;
        margin-left: 0px;
        color: var(--main);
    }

    .blog-filter-text{
        font-size: 14pt;
        cursor: pointer;
    }

    .blog-filter-toggle{
        float: right;
    }

    .blog-filter-toggle.open{
        transform: rotate(-90deg);
    }

    .blog-category-separator{
        display:none;
    }

}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 850px) {

    nav{
        position: sticky;
        font-size: calc(24pt + 1vw);
    }

    .menu-item{
        font-size: large;
    }

    .content{
        width: 800px;
        margin-left: auto;
        margin-right: auto;
    }

    .nav-wrapper{
        width: 800px;
        
    }

    .menu-item.theme-switcher{
        display: inline;
        margin-left: auto;
        margin-right: 0px;
    }

    .menu-item-separator{
        display: block;
    }

    /*BLOG STUFF*/

    .blog-navigation{
        font-size: large;
        border: 2px solid var(--contrast);
        padding: 10px;
        flex-direction: row;
    }

    .blog-filter-text{
        color: var(--contrast);
    }

    .blog-filter-toggle{
        display:none;
    }

    .blog-category-separator{
        display:block;
    }

}

/* Other*/

.notice{
    padding: 15px 0px 15px 0px;;
    margin: 15px 0px 15px 0px;
    text-align: center;
    background-color: var(--contrast);
    color: var(--main);
}

